LAb 1 Website HTML

--- a/Topic1/Image.html
+++ b/Topic1/Image.html
@@ -11,6 +11,9 @@
   </p>
         <!--comment-->
     <p>Here is an image of a dog!</p>
+
+<!--  img is used to set an image, src is the source of the image,
+        alt is alternative text, title attaches a title to the image-->
     <img src="https://t3.ftcdn.net/jpg/02/60/77/96/360_F_260779661_dRl8Rjw8ab1ohirg8Bd9LtWWeTSMtrQN.jpg"
          height="200" width="300" alt="A Dog" title="Dog">
     <img src="Dog.jpg" width="224" height="332"
