--- a/Topic1/hello.html
+++ b/Topic1/hello.html
@@ -25,6 +25,20 @@
         <li>Make Dinner</li>
     </ol>
 
+<!--    <!DOCTYPE html>-->
+<!--    <html>-->
+<!--    <body>-->
+
+    <h1>Add a hyperlink to an image</h1>
+
+    <p><a href="https://www.w3schools.com">
+        <img src="dog.jpg" alt="W3Schools.com" width="100" height="132">
+    </a></p>
+
+<!--    </body>-->
+<!--    </html>-->
+
+
 </body>
 
 </html>
