--- a/Topic1/helloTest.html
+++ b/Topic1/helloTest.html
@@ -1,5 +1,12 @@
 <!--Start by setting the document type-->
 <!DOCTYPE html>
+
+<!--Markup Tags are used to create Elements-->
+<!--Some HTML elements feature attributes
+    that allow options in an element-->
+<!--< and > are called pointy brackets-->
+<!--HTML Elements can be nested-->
+
 <html lang="en">
 <!--HTML begins the code block-->
 
