--- a/Topic6/chart/first/chart.html
+++ b/Topic6/chart/first/chart.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <!--    <meta charset="UTF-8">-->
-    <title>Chart Without Install</title>
+    <title>Bar Without Install</title>
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js"-->
 <!--            integrity="sha512-v3ygConQmvH0QehvQa6gSvTE2VdBZ6wkLOlmK7Mcy2mZ0ZF9saNbbk19QeaoTHdWIEiTlWmrwAL4hS8ElnGFbA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>-->
-<!--  <script async defer src="helloChart.js"></script>-->
+<!--    <script async defer src="helloChart.js"></script>-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
-    <script async defer src="hellochart.js"></script>
+    <script async defer src="helloChart.js"></script>
 </head>
 <body>
 
