--- a/Topic6/chart/donut/donut.html
+++ b/Topic6/chart/donut/donut.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Donut Without Install</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
   <script async defer src="donut.js"></script>
 
